Apache Falcon Regression Change log

Trunk (Unreleased)

  INCOMPATIBLE CHANGES

  NEW FEATURES
   FALCON-1242 Search UI test for entity upload button (Namit Maheshwari)

   FALCON-1222 Feed Wizard multiple tests (Namit Maheshwari)

   FALCON-1229 Tests for instance page on SearchUI (Ruslan Ostafiychuk)

   FALCON-1216 Cluster setup wizard multiple tests (Paul Isaychuk via Ruslan Ostafiychuk)

   FALCON-1202 Add tests for EntityPage (Raghav Kumar Gautam)

   FALCON-1210 Process Setup tests for testing header and general step default scenario (Raghav Kumar Gautam)

   FALCON-1201 Feed Setup tests for testing header and default scenario (Namit Maheshwari)

   FALCON-1198 Test buttons available on search results page (Ruslan Ostafiychuk)

   FALCON-1187 Test that changes made via API are reflected on UI (Ruslan Ostafiychuk
   via Raghav Kumar Gautam)

   FALCON-1173 Tests for entities table of search-ui (Ruslan Ostafiychuk)

   FALCON-1171 Adding search API tests (Paul Isaychuk via Raghav Kumar Gautam)

   FALCON-1167 Homepage & Login test for search-ui (Raghav Kumar Gautam via Ruslan Ostafiychuk)

   FALCON-1067 Add test in falcon-regression for feed instance listing api(Karishma G 
   via Samarth G) 
 
   FALCON-1066 Add test in falcon to test process SLA feature(Pragya M via Samarth G)
 
   FALCON-964 add test in falcon regression to test loading of jar present in user lib(Pragya M 
   via Samarth Gupta)
   
   FALCON-974 add test in falcon-regression for log mover feature(Pragya via Samarth Gupta)
   
   FALCON-843 add test to support current & last week el expression(Pragya M via Samarth G)

   FALCON-1035 Add test in falcon regression for validate feature. Validate is exposed 
   via both server and prism (Karishma G via Samarth Gupta)

   FALCON-1030 Test for Add option to search for Entities(Pragya Mittal Via Samarth Gupta)

   FALCON-1043 Add test in falcon to test touch feature(Pragya Mittal via Samarth Gupta)   
