@@ -5,6 +5,8 @@ Trunk (Unreleased)
   INCOMPATIBLE CHANGES
 
   NEW FEATURES
+   FALCON-1254 ClusterSetup UI: edit xml test cases, stabilize 2 tests (Paul Isaychuk via Ruslan Ostafiychuk)
+
    FALCON-1242 Search UI test for entity upload button (Namit Maheshwari)
 
    FALCON-1222 Feed Wizard multiple tests (Namit Maheshwari)
